# haw-prog1

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md
docs/: ArchitectureOverview.md  CustomComponent.md  EngineArchitecture.md  GeneralOutline.md  PlannedFeatures.md  Presentation.md  SetupGuide.md
include/: .gitkeep  Point.h  Point3D.h
include/engine/: AnimationComponent.h  Component.h  Context.h  Core.h  GameObject.h  JsonConversion.h  MessageBus.h  Music.h  MusicComponent.h  RenderComponent.h  SoundBuffer.h  SoundComponent.h  Sprite.h  Texture.h  Transform.h  UUID.h  Vector2.h
include/game/: AnimationComponent.h  AudioSystem.h  ButtonComponent.h  Component.h  Context.h  Game.h  GameManager.h  GameMessages.h  GameObject.h  GameState.h  GameView.h  InputSystem.h  MusicComponent.h  RenderComponent.h  Scene.h  Sprite.h  Transform.h  TurnSystem.h  Vector2.h  context.hpp
src/: Point.cpp  Point3d.cpp  main.cpp
src/engine/: Core.cpp  GameObject.cpp  MessageBus.cpp  RenderComponent.cpp  Vector2.cpp
src/game/: ButtonComponent.cpp  Game.cpp  GameManager.cpp  GameObject.cpp  GameView.cpp  InputSystem.cpp  RenderComponent.cpp  Scene.cpp  TurnSystem.cpp  Vector2.cpp  game.cpp
